deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: instaclone
    version: v1
  name: instaclone
  namespace: default

spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: instaclone
  template:
    metadata:
      labels:
        app: instaclone
        version: v1
    spec:
      containers:
      - image: abzed/instaclone
        imagePullPolicy: IfNotPresent
        name: instaclone
        resources:
          requests:
            cpu: 300m
            memory: 112Mi
          limits:
            cpu: 500m
            memory: 224Mi

      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: instaclone
  name: instaclone
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: instaclone
  sessionAffinity: None
  type: NodePort
